Updated naming conventions as well as created temp tables in order to properly process the dates in moistmeter and HighestGrossingMovies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-# Path properties
-server.servlet.contextPath=/api
-# MySQL properties
-spring.datasource.url=jdbc:mysql://localhost:3306/dp-api
+# application.properties
+
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/dataprocessingdata
 spring.datasource.username=root
+spring.datasource.password=pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate properties
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
